recursion.lessons.recursion.spiral.SpiralUse.scala.error
SpiralUse:4: error: type mismatch;
 found   : Double(0.5)
 required: Int
    spiral(100,65,1,0.5);
                    ^